cmake_minimum_required(VERSION 3.14)
project(MyCode)

set(CMAKE_CXX_STANDARD 14)
set(debug)
include_directories()
add_executable(A sheep.cpp killMaster.cpp)
add_executable(B multiply.cpp)
add_executable(C hasSubtree.cpp)
add_executable(D isNumeric.cpp)
add_executable(E fristChar.cpp)
add_executable(F movingCount.cpp)
add_executable(G LastRemaining_Solution.cpp)
add_executable(H IsContinuous.cpp)
add_executable(I hasPathDFS.cpp)
add_executable(J matchString.cpp)
add_executable(K MoreThanHalfNum_Solution.cpp)
add_executable(L killMaster.cpp)
add_executable(M ReverseSentence.cpp)