cmake_minimum_required(VERSION 3.14)
project(MyCode)

set(CMAKE_CXX_STANDARD 14)
set(debug)
include_directories()

add_executable(A2 Permutation.cpp )
add_executable(B2 multiply.cpp )
add_executable(C2 hasSubtree.cpp)
add_executable(D2 isNumeric.cpp)
add_executable(E2 fristChar.cpp)
add_executable(F2 movingCount.cpp)
add_executable(G2 LastRemaining_Solution.cpp)
add_executable(H2 IsContinuous.cpp)
add_executable(I2 hasPathDFS.cpp)
add_executable(J2 matchString.cpp)
add_executable(K2 MoreThanHalfNum_Solution.cpp)
add_executable(L2 GreatestSumOfSubArray.cpp)
add_executable(M2 ReverseSentence.cpp)
add_executable(O2 Convert.cpp)
add_executable(N2 InversePairs.cpp)
add_executable(P2 CloneList.cpp)
add_executable(Q2 NumberOf1Between1AndN_Solution.cpp)
add_executable(R2 MergeList.cpp)
