cmake_minimum_required(VERSION 3.14)
project(MyCode)

set(CMAKE_CXX_STANDARD 14)
set(debug)
include_directories()

add_executable(A3 sheep.cpp )
add_executable(L3 killMaster.cpp)
add_executable(N3 meituan1.cpp)
add_executable(O3 meituan2.cpp)
add_executable(S3 kuaishou.cpp)
add_executable(T3 zijie.cpp)
add_executable(U3 zijie2.cpp)
