cmake_minimum_required(VERSION 3.14)
project(MyCode)

set(CMAKE_CXX_STANDARD 14)
set(debug)
include_directories()

add_executable(A3 sheep.cpp )
add_executable(B3 shunfeng.cpp)
add_executable(C3 wangyi1.cpp)
add_executable(D3 huyu1.cpp)
add_executable(E3 huyu2.cpp)
add_executable(F3 huyu3.cpp)
add_executable(G3 huyu4.cpp)
add_executable(H3 wangyi2.cpp)
add_executable(I3 xiecheng.cpp)
add_executable(J3 aiqiyi1.cpp)
add_executable(K3 sougou1.cpp)
add_executable(L3 killMaster.cpp)
add_executable(N3 meituan1.cpp)
add_executable(O3 meituan2.cpp)
add_executable(S3 kuaishou.cpp)
add_executable(T3 zijie.cpp)
add_executable(U3 zijie2.cpp)
add_executable(V3 baidu.cpp)
add_executable(W3 baidu1.cpp)

